--- a/day13/.env
+++ b/day13/.env
@@ -1,1 +1,1 @@
-DB_URI = mongodb+srv://root:saturn123@@signupster.vdvhmpb.mongodb.net/?retryWrites=true&w=majority
+DB_URI = mongodb+srv://arda:arda12345678@bambam.sibhn43.mongodb.net/?retryWrites=true&w=majority
